Periodic update - 07/27/20-04:30pm UTC

--- a/doc_source/API_Scan_v20111205.md
+++ b/doc_source/API_Scan_v20111205.md
@@ -18,7 +18,7 @@ The result set is eventually consistent\.
 
 ```
 // This header is abbreviated.
-// For a sample of a complete header, see [DynamoDB Low\-Level API](Programming.LowLevelAPI.md).
+// For a sample of a complete header, see .
 POST / HTTP/1.1 
 x-amz-target: DynamoDB_20111205.Scan  
 content-type: application/x-amz-json-1.0
@@ -118,7 +118,7 @@ For examples using the AWS SDK, see [Working with Scans in DynamoDB](Scan.md)\.
 ### Sample Request<a name="API_Scan_Examples_Request"></a>
 
 ```
-// This header is abbreviated. For a sample of a complete header, see [DynamoDB Low\-Level API](Programming.LowLevelAPI.md).
+// This header is abbreviated. For a sample of a complete header, see .
 POST / HTTP/1.1 
 x-amz-target: DynamoDB_20111205.Scan 
 content-type: application/x-amz-json-1.0
@@ -162,7 +162,7 @@ content-length: 465
 ### Sample Request<a name="API_Scan_Examples_Request2"></a>
 
 ```
-// This header is abbreviated. For a sample of a complete header, see [DynamoDB Low\-Level API](Programming.LowLevelAPI.md).
+// This header is abbreviated. For a sample of a complete header, see .
 POST / HTTP/1.1 
 x-amz-target: DynamoDB_20111205.Scan 
 content-type: application/x-amz-json-1.0
@@ -205,7 +205,7 @@ Date: Mon, 15 Aug 2011 16:52:02 GMT
 ### Sample Request<a name="API_Scan_Examples_Request3"></a>
 
 ```
-// This header is abbreviated. For a sample of a complete header, see [DynamoDB Low\-Level API](Programming.LowLevelAPI.md).
+// This header is abbreviated. For a sample of a complete header, see .
 POST / HTTP/1.1 
 x-amz-target: DynamoDB_20111205.Scan
 content-type: application/x-amz-json-1.0
